<resources>
    <string name="app_name">UniEstoque</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inserirSenha">Senha</string>
    <string name="inserirLogin">E-mail</string>

    <string name="inserir_produto">Insira seus dados:</string>
    <string name="sexo_m">Masculino</string>
    <string name="sexo_f">Feminino</string>

    <string name="erroInput">Usuario ou senha incorretos</string>
    <string name="cadastrar_nova_conta">Não tem uma conta? Crie aqui!</string>
    <string name="txtBtnCadastrar">Cadastrar</string>
    <string name="txtBtnAtualizar">Atualizar</string>
    <string name="txt_btn_login">Entrar</string>

    <string name="cad_produto">Dados do produto:</string>
    <string name="codProduto">Codigo:</string>
    <string name="nomeProduto">Nome:</string>
    <string name="qtdProduto">Quantidade:</string>
    <string name="valorProduto">Valor:</string>
    <string name="descProduto">Descrição:</string>
    <string name="salvarImg">Salvar Imagem</string>


    <string name="entrar">Entrar</string>
    <string name="editar">Editar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="atualizar">Atualizar</string>
    <string name="sair">Sair</string>
    <string name="criarconta">Criar Conta</string>
    <string name="imagemproduto">Imagem do Produto</string>
    <string name="cartaousuario">Cartao do Usuario</string>
    <string name="fotousuario">Foto do Usuario</string>
    <string name="nomeusuario">Nome do Usuario</string>
    <string name="uploadfoto">Upload de foto</string>
    <string name="listaGrafico">Lista com os dados em porcentagem dos produtos cadastrados</string>
    <string name="listaProduto">Lista com os produtos cadastrados</string>
    <string name="grafico">Grafico com a porcentagem dos produtos cadastrados</string>
    <string name="adicionarProduto">Adicionar novo produto</string>
    <string name="listarProdutos">Listar produtos</string>
    <string name="abrirGrafico">Abrir Grafico</string>
    <string name="atualizarFoto">Atualizar Foto no sistema</string>

    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="senha">senha</string>
</resources>