<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_backgroud"
    tools:context=".edit_user">


    <View
        android:id="@+id/card_User"
        style="@style/ContainerComponents"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_270sdp"
        android:layout_marginTop="@dimen/_77sdp"
        app:layout_constraintTop_toTopOf="@+id/imgUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUser"
        style="@style/card_user"
        android:layout_width="@dimen/_154sdp"
        android:layout_height="@dimen/_154sdp"
        android:layout_marginTop="@dimen/_77sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/fotousuario"/>

    <ImageButton
        android:id="@+id/btn_upload"
        style="@style/btn_up_img"
        app:layout_constraintBottom_toBottomOf="@+id/imgUser"
        app:layout_constraintEnd_toEndOf="@+id/imgUser"
        android:contentDescription="@string/uploadfoto"/>

    <ImageView
        android:id="@+id/icon_email"
        style="@style/icon_email"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_email_usuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/card_User"
        app:layout_constraintTop_toTopOf="@+id/txt_email_usuario" />

    <ImageView
        android:id="@+id/icon_person"
        style="@style/icon_person"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_nome_usuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/card_User"
        app:layout_constraintTop_toTopOf="@+id/txt_nome_usuario" />

    <TextView
        android:id="@+id/txt_nome_usuario"
        style="@style/txtCardUser"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/imgUser"
        app:layout_constraintStart_toStartOf="@+id/card_User"
        app:layout_constraintEnd_toEndOf="@+id/card_User"/>

    <TextView
        android:id="@+id/txt_email_usuario"
        style="@style/txtCardUser"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/card_User"
        app:layout_constraintStart_toStartOf="@+id/card_User"
        app:layout_constraintTop_toBottomOf="@+id/txt_nome_usuario" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_salvar_img"
        style="@style/btnCadastrar1"
        android:text="@string/salvarImg"
        android:layout_marginTop="@dimen/_23sdp"
        app:layout_constraintStart_toStartOf="@+id/card_User"
        app:layout_constraintEnd_toStartOf="@+id/btn_sair"
        app:layout_constraintTop_toBottomOf="@+id/card_User"
        android:contentDescription="@string/atualizarFoto"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sair"
        style="@style/btnCadastrar1"
        android:text="Sair"
        android:layout_marginTop="@dimen/_23sdp"
        app:layout_constraintStart_toEndOf="@+id/btn_salvar_img"
        app:layout_constraintEnd_toEndOf="@+id/card_User"
        app:layout_constraintTop_toBottomOf="@+id/card_User"
        android:contentDescription="@string/sair"/>
</androidx.constraintlayout.widget.ConstraintLayout>