<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cornflaw"
    tools:context=".teste">


    <TextView
        android:id="@+id/textView4"
        style="@style/textCadastro"
        android:text="@string/inserir_produto"
        android:textAlignment="center"
        android:textColor="@color/linen"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/button"
        style="@style/btnCadastrar"
        android:text="Cadastrar"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <EditText
        android:id="@+id/inputNome"
        style="@style/txtCadastro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <EditText
        android:id="@+id/inputQuantidade"
        style="@style/txtQuantidade"
        android:autofillHints="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <TextView
        android:id="@+id/txtQuantidade"
        style="@style/textCadastro"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="Quantidade:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416"
        tools:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/txtNome"
        style="@style/textCadastro"
        android:text="Nome:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323"
        tools:layout_conversion_absoluteHeight="35dp"
        tools:layout_conversion_absoluteWidth="76dp"
        tools:layout_marginTop="20dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="319dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721">

        <TextView
            android:id="@+id/textView3"
            style="@style/textCadastro"
            android:text="Sexo:"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioMasc"
            style="@style/rbSexo"
            android:text="@string/sexo_m"/>

        <RadioButton
            android:id="@+id/radioFemin"
            style="@style/rbSexo"
            android:text="@string/sexo_f"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>