<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_backgroud"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="90dp"
            android:layout_height="88dp"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/icone_login" />

        <TextView
            android:id="@+id/txtTitulo"
            style="@style/pi3"
            android:layout_width="127dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:text="Login"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/txtsenha"
            style="@style/txtInput"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:drawableRight="@drawable/ic_olho"
            android:hint="@string/inserirSenha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtlogin" />

        <EditText
            android:id="@+id/txtlogin"
            style="@style/txtInput"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/inserirLogin"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="92dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="Login:"
            android:textColor="@color/linen"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/btnCadastrar"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="Login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnRegistrar"
            app:layout_constraintHorizontal_bias="0.979"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtsenha"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegistrar"
            style="@style/btnCadastrar"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:text="Registrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtsenha" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="92dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="Senha:"
            android:textColor="@color/linen"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtlogin" />

        <TextView
            android:id="@+id/txtErro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="100dp"
            android:text="@string/erroInput"
            android:textColor="@color/deep_orange"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>